# poc-quic-ipv6-aws

./: .gitignore  README.md  makefile
.github/workflows/: go.yml  rust.yml
client/: Cargo.toml  go.mod  go.sum  main.go
client/src/: main.rs
quic_esp32_server/server/: Cargo.toml  build.rs
quic_esp32_server/server/src/: main.rs
server/: Cargo.toml  ca-cert.pem  ca-key.pem
server/src/: main.rs
