[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
#mio = { version = "1.0.3", features = ["os-poll", "net"]}
#quiche = "0.22.0"
s2n-quic = "1"
#rustls = "^0.23.16"
bytes = "1.9.0"
log = { version = "0.4", features = ["max_level_debug"]}
tokio = { version = "1.20", features = ["macros", "rt-multi-thread","net"] }