[package]
name = "server"
version = "0.1.0"
authors = ["dialMForMonkey <zz3qumk6i@relay.firefox.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]


esp-backtrace = { version = "0.15.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = [ "esp32" ] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = ["utils","esp-alloc","esp32", "wifi", "sys-logs","log"]}
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
log = { version = "0.4.25" }
esp-alloc = { version = "0.6.0" }
heapless = "0.8.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"




[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
